--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
   <div id="form">
         <form>
-            <input class="todo-input" type="text" placeholder="Add a task.">
-            <button class="todo-btn" type="submit">I Got This!</button>
+            <input class="todo-input" type="text" placeholder="添加任务">
+            <button class="todo-btn" type="submit">提交</button>
         </form>
     </div>
 
@@ -62,5 +62,6 @@
         </ul>
     </div>
     <script src="JS/main.js" type="text/javascript"> </script>
+  </div>
 </body>
 </html>
