--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="theme-color" content="#062e3f">
     <meta name="Description" content="A dynamic and aesthetic To-Do List WebApp.">
 
-    <!-- Google Font: Quick Sand -->
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn-font.hyperos.mi.com/font/css?family=MiSans_VF:VF:Chinese_Simplify,Latin&amp;display=swap" as="style"/>
 
     <!-- font awesome (https://fontawesome.com) for basic icons; source: https://cdnjs.com/libraries/font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
@@ -15,7 +14,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/corner.css">
-    <title>JUST DO IT</title>
+    <title>TAC-Server ToDoList</title>
 
 </head>
 
